--- a/references.bib
+++ b/references.bib
@@ -46,3 +46,54 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2006astro.ph..6757A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2015arXiv151107289C,
+   author = {{Clevert}, D.-A. and {Unterthiner}, T. and {Hochreiter}, S.},
+    title = "{Fast and Accurate Deep Network Learning by Exponential Linear Units (ELUs)}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1511.07289},
+ primaryClass = "cs.LG",
+ keywords = {Computer Science - Learning},
+     year = 2015,
+    month = nov,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv151107289C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012arXiv1207.0580H,
+   author = {{Hinton}, G.~E. and {Srivastava}, N. and {Krizhevsky}, A. and
+        {Sutskever}, I. and {Salakhutdinov}, R.~R.},
+    title = "{Improving neural networks by preventing co-adaptation of feature detectors}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1207.0580},
+ keywords = {Computer Science - Neural and Evolutionary Computing, Computer Science - Computer Vision and Pattern Recognition, Computer Science - Learning},
+     year = 2012,
+    month = jul,
+   adsurl = {http://adsabs.harvard.edu/abs/2012arXiv1207.0580H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014arXiv1412.6980K,
+   author = {{Kingma}, D.~P. and {Ba}, J.},
+    title = "{Adam: A Method for Stochastic Optimization}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1412.6980},
+ primaryClass = "cs.LG",
+ keywords = {Computer Science - Learning},
+     year = 2014,
+    month = dec,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1412.6980K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{JMLR:v15:srivastava14a,
+  author  = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and Ilya Sutskever and Ruslan Salakhutdinov},
+  title   = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+  journal = {Journal of Machine Learning Research},
+  year    = {2014},
+  volume  = {15},
+  pages   = {1929-1958},
+  url     = {http://jmlr.org/papers/v15/srivastava14a.html}
+}
