--- a/references.bib
+++ b/references.bib
@@ -46,3 +46,9 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2006astro.ph..6757A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Sonnenfeld17,
+author={Sonnenfeld, A., and Chan, J. and  Shu, Y.,},
+journal = PASJ,
+note={in prep.}
+}
