--- a/paper.tex
+++ b/paper.tex
@@ -83,7 +83,7 @@ For the current SL challenge, arcfinder was tunned to detect long and narrow arc
 \red{Reference to figure \ref{fig:Cabanac}?}
 
 \subsection{YattaLens Lite (Alessandro Sonnenfeld)}
-YattaLensLite is a simpler version of the algorithm YattaLens (Sonnenfeld et al. in prep.), modified to meet the time constraints of the challenge.
+YattaLensLite is a simpler version of the algorithm YattaLens \citep{Sonnenfeld17}, modified to meet the time constraints of the challenge.
 YattaLensLite subtracts a model surface brightness profile describing the lens galaxy from the $g$-band image, then runs SExtractor to detect tangentially elongated or ring-shaped objects, which are interpreted as lensed images.
 In the ground-based challenge, the model lens surface brightness profile is obtained by taking a rescaled version of the $i$-band image.
 The difference in color between lens and source usually allows the lensed images to still be detectable after the lens subtraction process.
