--- a/references.bib
+++ b/references.bib
@@ -46,9 +46,10 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2006astro.ph..6757A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
-@ARTICLE{Sonnenfeld17,
-author={Sonnenfeld, A., and Chan, J. and  Shu, Y.,},
-journal = PASJ,
-note={in prep.}
+@Unpublished{Sonnenfeld17,
+author = {Sonnenfeld et al.},
+title = {?},
+note = {PASJ, in prep.},
+year = {2017}
 }
+
